#ifndef ICONSETBROWSER_H
#define ICONSETBROWSER_H

#include <QWidget>
#include "layouts/borderlayout.h"

class IconSetBrowser : public QWidget
{
    Q_OBJECT
public:
    explicit IconSetBrowser(QWidget *parent = 0);

signals:

public slots:

};

#endif // ICONSETBROWSER_H
